# gecko

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: documentation.html  index.html
docs/css/: style.css
docs/js/: main.js
include/: gecko.h
include/gecko/: crypto.h  usb.h  util.h  vault.h
installer/: gecko.iss
src/cli/: main.c
src/crypto/: aes.c  gcm.c  pbkdf2.c  random.c  sha256.c
src/usb/: usb.c
src/util/: util.c
src/vault/: vault.c
